--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,3 +52,11 @@ body {
     overflow: auto;
     padding: 20px;
 }
+.page-header {
+    padding-bottom: 0 !important;
+    margin: 0 0 10px !important;
+}
+.collapse-icon {
+    line-height: 2;
+    font-size: 60%;
+}
