Fixed setup link

--- a/Views/Setup.cshtml
+++ b/Views/Setup.cshtml
@@ -16,7 +16,7 @@
         <p class="lead">
             Cool beans! g_ has been successfully installed.
         </p>
-        <a class="btn btn-primary btn-lg" href="../">
+        <a class="btn btn-primary btn-lg" href="./">
             Open g_
         </a>
     }
