--- a/Views/Setup.cshtml
+++ b/Views/Setup.cshtml
@@ -12,7 +12,8 @@
 <body>
 <div class="container" style="width: 500px; padding-bottom: 50px;">
     <h1 class="page-header">g_ installer</h1>
-    @if (@Model.Success) {
+    @if (@Model.Success)
+    {
         <p class="lead">
             Cool beans! g_ has been successfully installed.
         </p>
@@ -20,7 +21,8 @@
             Open g_
         </a>
     }
-    else {
+    else
+    {
         <p class="lead">
             This page will help you set up your own installation of g_.
         </p>
@@ -29,7 +31,8 @@
             <p>
                 g_ needs at least one user to function. Create your login details here.
             </p>
-            @if (@Model.UserError != null) {
+            @if (@Model.UserError != null)
+            {
                 <div class="alert alert-danger">
                     @Html.Raw(@Model.UserError)
                 </div>
@@ -46,7 +49,8 @@
                 <input asp-for="Password" class="form-control" placeholder="Something that's not 1234" required>
             </div>
             <h2>Other settings</h2>
-            @if (@Model.OtherError != null) {
+            @if (@Model.OtherError != null)
+            {
                 <div class="alert alert-danger">
                     @Model.OtherError
                 </div>
