--- a/Views/Setup.cshtml
+++ b/Views/Setup.cshtml
@@ -1,4 +1,4 @@
-@model Games.Controllers.SetupController.ViewModel
+@model Games.Models.SetupViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
 <html lang="en">
