Organized view models in subdirectory

--- a/Views/Setup.cshtml
+++ b/Views/Setup.cshtml
@@ -1,4 +1,4 @@
-@model Games.Models.SetupViewModel
+@model Games.Models.ViewModels.SetupViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
 <html lang="en">
